--- a/prosjekt-2/package.json
+++ b/prosjekt-2/package.json
@@ -47,6 +47,7 @@
   "devDependencies": {
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
+    "@types/react-test-renderer": "^18.0.0",
     "jest": "^27.5.1",
     "react-test-renderer": "^18.2.0"
   }
